--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,12 +12,12 @@
     <h1><a href="/">{{ site.title }}</a></h1>
     <p class="tagline">{{ site.description }}</p>
 
-    <nav class="nav">
-      <a href="/">Home</a> |
-      <a href="/about.html">About</a> |
-      <a href="/posts.html">Posts</a> |
-      <a href="/resources.html">Resources</a>
-    </nav>
+   <nav class="nav">
+  <a href="{{ '/' | relative_url }}">Home</a> |
+  <a href="{{ '/about/' | relative_url }}">About</a> |
+  <a href="{{ '/posts/' | relative_url }}">Posts</a> |
+  <a href="{{ '/resources/' | relative_url }}">Resources</a>
+</nav>
 
     <hr>
   </header>
