Simplify footer text from 'Hand-coded HTML' to 'HTML'

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
   <footer>
     <hr>
-    <p>© {{ "now" | date: "%Y" }} · Hand-coded HTML</p>
+    <p>© {{ "now" | date: "%Y" }} · HTML</p>
   </footer>
 </div>
 
